finished spacing issue with header and finished building button

--- a/css/css.css
+++ b/css/css.css
@@ -37,6 +37,7 @@ nav {
 ul {
     display: inline-block;
     height: 100%;
+    margin-left: 64%;
     white-space: nowrap;
 }
 
@@ -156,7 +157,8 @@ section .box img {
 }
 
 button {
-    padding: 10px 70px; 
+    display: inline-block;
+    padding: 10px 35px; 
     border: none;
     margin-top: 30px;
     font-size: 15px;
@@ -164,6 +166,16 @@ button {
     color: #fff;
     background-color: #0078a1;
     cursor: pointer;
+}
+
+.carrot {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 15px;
+    border-top: 10px solid #fff;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
 }
 
 
